@@ -1,3 +1,6 @@
+13 Jul 2004 mipsator
+ * misc fixes and cleanup for experimental parsing engine.
+
 12 Jul 2004 mipsator
  * imported experimental parser engine.
  * synced parser test.
